Updated Spring version and improved unit and integration tets (#143)